--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^7.6.7",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "time-ago": "^0.2.1"
   },
